--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,20 +1,22 @@
 <html>
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link href="css/sneaker-styles.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-<div id="banner">
-    <div id="banner-content">
-        This is your banner text, centered and fixed at 800px in width
-    </div>
-</div>
-<div id="main-content">
-    <p>Main page content goes here</p>
-</div>
 
+<body>
+{{^user}}
+<form action="/login" method="post">
+    <input type="text" placeholder="Username" name="userName" required/>
+    <input type="password" placeholder="Password" name="password" required/>
+    <button type="submit">Login</button>
+</form>
+{{/user}}
+{{#user}}
+Welcome, {{name}}!
+<form action="/logout" method="post">
+    <button type="submit">Logout</button>
+</form>
 
 <form action="/add-sneaker" method="post">
     <input type="text" placeholder="Jordan Model Name" name="jordanModel"/>
+
     <select name="jordanModelNumber">
         <option selected disabled>Jordan Model Number</option>
         <option value="1">Jordan "1"</option>
@@ -29,7 +31,9 @@
         <option value="10">Jordan "10"</option>
         <option value="11">Jordan "11"</option>
         <option value="12">Jordan "12"</option>
+        <option value="13">Jordan "13"</option>
     </select>
+
     <input type="text" placeholder="Jordan Color " name="jordanColor"/>
     <input type="number" placeholder="Release Year" name="jordanReleaseYear"/>
     <input type="number" placeholder="Jordan Value $$" name="jordanPrice"/>
@@ -39,12 +43,15 @@
 
 <div style="position: relative; float: left; width: 100%; padding: 20px;">
 <ol>
+
     {{#sneakers}}
-    <li><b>Model:</b>{{model}}{{modelNo}}'s &nbsp<b>ColorWay:</b> {{color}}&nbsp <b>ReleaseYear:</b>{{releaseYear}}&nbsp <b>Price:</b>${{price}}.0 </li>
+    <li> <b>Model:</b>{{model}}{{modelNo}}'s &nbsp <b>ColorWay:</b> {{color}}&nbsp <b>ReleaseYear:</b> {{releaseYear}}&nbsp <b>Price:</b>${{price}}0  </li>
     <img src="{{photoLink}}" width="200" height="150"/>
+     
+    {{#copped}} <font size="3" color="blue">(Sneaker Copped)</font> {{/copped}}  {{^copped}}   {{/copped}}  <a href="/delete?sneakerID={{id}}">Remove Sneaker</a> <a href="/sneaker-copped?sneakerID={{id}}">Mark Sneaker Copped</a>
     {{/sneakers}}
 </ol>
+    {{/user}}
 </div>
-
 </body>
 </html>
